# fastcustoms

./: .env.dev  .gitignore  Dockerfile  Procfile  docker-compose.yml  entrypoint.sh  export.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt
common/: models.py  serializers.py  urls.py  views.py
common/migrations/: 0001_initial.py
core/middleware/: log.py
customAdmin/: serializers.py  urls.py  views.py
fastcustoms/: asgi.py  settings.py  urls.py  wsgi.py
geo/: admin.py  filters.py  indexes.py  models.py  serializers.py  urls.py  views.py
geo/migrations/: 0001_initial.py  0002_auto_20210509_2311.py  0003_country_capital.py  0004_auto_20210510_0025.py  0005_alter_city_slug.py  0006_auto_20210512_1932.py  0007_auto_20210708_2214.py  0008_auto_20210708_2325.py  0009_city_types.py  0010_auto_20210720_2329.py  0011_auto_20210720_2336.py  0012_remove_country_capital.py  0013_alter_city_types.py
goods/: admin.py  apps.py  calculation.py  managers.py  models.py  serializers.py
goods/migrations/: 0001_initial.py  0002_rename_total_size_good_total_volume.py  0003_auto_20210628_1652.py  0004_alter_good_total_volume.py  0005_alter_box_type.py  0006_alter_good_managers.py
loading/: geography.py
map/: API.py  abstract.py
order/: models.py  serializers.py  urls.py  views.py
pricing/: admin.py  managers.py  models.py  serializers.py
report/: serializer.py  urls.py  views.py
route/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
utils/: calculation.py  constants.py  enums.py  functions.py
(+81 files in other folders)
