[tool.poetry]
name = "fastcustoms"
version = "0.1.0"
description = ""
authors = ["mnogoruk <lionless072@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
Django = "^3.2.2"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-enumfield = "^2.0.2"
herepy = "^3.5.2"
pydantic = "^1.8.2"
djangorestframework-simplejwt = "^4.7.1"
django-cors-headers = "^3.7.0"
django-measurement = "^3.2.3"
configparser = "^5.0.2"
pyjavaproperties = "^0.7"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
drf-haystack = "^1.8.10"
python-memcached = "^1.59"
pymemcache = "^3.4.4"
Serializer = "^0.2.1"
psycopg2-binary = "^2.9.1"
poetry-dotenv-plugin = "^0.1.0-alpha.2"
django-request-logging = "^0.7.3"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
